# ShiftsCucinone

./: .gitignore  Guida.docx  README.md  data-structures-chart.drawio  latex_example.txt  main.py  tempCodeRunnerFile.py
common/: format_date.py  shift_utilities.py
common/latex_export/: end_string_latex.txt  start_string_latex.txt
common/latex_export/pdflatex-0.1.3/: PKG-INFO  README.md  pyproject.toml  setup.py
console/: console_menu.py
database/: exception_dates_list.txt  users.csv
priority/: randomizer.py  weight_priority.py
slots/: shifts_factory.py
users/: user.py  user_management.py
